--- a/PaymentServiceApplication/src/main/resources/application.yaml
+++ b/PaymentServiceApplication/src/main/resources/application.yaml
@@ -12,7 +12,7 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
-    show-sql: true
+    show-sql: false
   mysql:
     url: jdbc:mysql://localhost:3306/shoppingstore
     username: admin
