Actualizacion de los microservicios en el Config-data

--- a/CatalogServicesApplication/src/main/resources/bootstrap.yaml
+++ b/CatalogServicesApplication/src/main/resources/bootstrap.yaml
@@ -1,7 +1,8 @@
-server:
-  port: 8081
-
 spring:
+  cloud:
+    config:
+      enabled: true
+      uri: http://localhost:8081
   application:
     name: Catalog-Services
   datasource:
