--- a/CartServicesApplication/src/main/resources/bootstrap.yaml
+++ b/CartServicesApplication/src/main/resources/bootstrap.yaml
@@ -1,7 +1,8 @@
-server:
-  port: 8082
-
 spring:
+  cloud:
+    config:
+      enabled: true
+      uri: http://localhost:8081
   application:
     name: Cart-Services
   datasource:
