--- a/Config-data/Gateway-Services.yaml
+++ b/Config-data/Gateway-Services.yaml
@@ -1,5 +1,6 @@
 server:
-  port: ${PORT:${SERVER_PORT:0}}
+  port: 8080
+  
 eureka:
   client:
     fetch-registry: true
@@ -7,4 +8,4 @@ eureka:
     service-url:
       default-zone: http://localhost:8761/eureka
   instance:
-    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+    hostname: localhost
