--- a/PaymentServiceApplication/src/main/resources/bootstrap.yaml
+++ b/PaymentServiceApplication/src/main/resources/bootstrap.yaml
@@ -1,7 +1,8 @@
-server:
-  port: 8083
-
 spring:
+  cloud:
+    config:
+      enabled: true
+      uri: http://localhost:8081
   application:
     name: Payment-Service
   datasource:
