Actualizacion de los microservicios en el Config-data

--- a/PaymentServiceApplication/src/main/resources/bootstrap.yaml
+++ b/PaymentServiceApplication/src/main/resources/bootstrap.yaml
@@ -4,7 +4,7 @@ spring:
       enabled: true
       uri: http://localhost:8081
   application:
-    name: Payment-Service
+    name: Payment-Services
   datasource:
     url: jdbc:mysql://localhost:3306/shoppingstore
     username: admin
