--- a/Config-data/Auth-Services.yaml
+++ b/Config-data/Auth-Services.yaml
@@ -1,5 +1,6 @@
 server:
-  port: ${PORT:${SERVER_PORT:0}}
+  #port: ${PORT:${SERVER_PORT:0}}
+  port: 8001
 eureka:
   client:
     fetch-registry: true
