--- a/Config-data/Gateway-Services.yaml
+++ b/Config-data/Gateway-Services.yaml
@@ -9,3 +9,34 @@ eureka:
       default-zone: http://localhost:8761/eureka
   instance:
     hostname: localhost
+
+
+spring:
+  cloud:
+    gateway:
+      discovery:
+        locator:
+          enabled: true
+      routes:
+        - id: Customer-Services
+          uri: lb://Customer-Services
+          predicates:
+            - Path=/customer/**
+          filters:
+            - AuthFilter
+        - id: Cart-Services
+          uri: lb://Cart-Services
+          predicates:
+            - Path=/cart/**
+        - id: Catalog-Services
+          uri: lb://Catalog-Services
+          predicates:
+            - Path=/product/**
+        - id: Payment-Services
+          uri: lb://Payment-Services
+          predicates:
+            - Path=/pay/**
+        - id: Auth-Services
+          uri: lb://Auth-Services
+          predicates:
+            - Path=/auth/**
