--- a/CatalogServicesApplication/build.gradle
+++ b/CatalogServicesApplication/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 	implementation("org.springframework.boot:spring-boot-starter-web")
 	implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap:3.1.3'
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server'
+	implementation("org.springframework.boot:spring-boot-starter-security")
 	implementation 'org.springframework.cloud:spring-cloud-starter-config'
 	implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
 	compileOnly("org.projectlombok:lombok")
