--- a/Config-data/Auth-Services.yaml
+++ b/Config-data/Auth-Services.yaml
@@ -9,10 +9,9 @@ eureka:
       default-zone: http://localhost:8761/eureka
   instance:
     instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
-  
   admin-paths:
     paths:
-      - uri: "/customer/create"
+      - uri: "/customer"
         method: "POST"
       #- uri: "/user/savecar/{1}[0-9]+"
         #method: "POST"
