Actualizacion y modificacion del microservicios Auth y GateWay

--- a/AuthServiceApplication/src/main/resources/bootstrap.yaml
+++ b/AuthServiceApplication/src/main/resources/bootstrap.yaml
@@ -21,5 +21,9 @@ jwt:
 
 admin-paths:
   paths:
-    - uri: "/customer"
+    -
+      uri: "/customer"
       method: "POST"
+    -
+      uri: "/customer/{1}"
+      method: "GET"
