Actualizacion y modificacion del microservicios Auth y GateWay

--- a/Config-data/Auth-Services.yaml
+++ b/Config-data/Auth-Services.yaml
@@ -11,7 +11,7 @@ eureka:
 admin-paths:
   paths:
     -
-      uri: "/customer"
+      uri: "/customer/create"
       method: "POST"
     -
       uri: "/customer/{1}"
