--- a/ConfigServicesApplication/src/main/resources/application.yaml
+++ b/ConfigServicesApplication/src/main/resources/application.yaml
@@ -5,7 +5,7 @@ Spring:
     config:
       server:
         git:
-          default-label: CustomerServices
+          default-label: ApiGateway
           uri: https://github.com/Raulcudris/ArchitectureMicroservicesJava.git
           search-paths: config-data
   application:
