--- a/GatewayServicesApplication/src/main/resources/bootstrap.yaml
+++ b/GatewayServicesApplication/src/main/resources/bootstrap.yaml
@@ -2,6 +2,9 @@ spring:
   application:
     name: Gateway-Services
   cloud:
+    loadbalancer:
+      ribbon:
+        enable: false
     config:
       enabled: true
       uri: http://localhost:8081
