--- a/CustomerServicesApplication/build.gradle
+++ b/CustomerServicesApplication/build.gradle
@@ -34,6 +34,9 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server'
 	implementation 'org.springframework.cloud:spring-cloud-starter-config'
 	implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
+	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	implementation 'org.springframework.boot:spring-boot-starter-aop:2.5.4'
 	compileOnly("org.projectlombok:lombok")
 	implementation 'mysql:mysql-connector-java'
 	annotationProcessor("org.projectlombok:lombok")
