--- a/AuthServiceApplication/src/main/resources/bootstrap.yaml
+++ b/AuthServiceApplication/src/main/resources/bootstrap.yaml
@@ -22,7 +22,7 @@ jwt:
 admin-paths:
   paths:
     -
-      uri: "/customer"
+      uri: "/customer/create"
       method: "POST"
     -
       uri: "/customer/{1}"
