--- a/Config-data/Customer-Services.yaml
+++ b/Config-data/Customer-Services.yaml
@@ -1,15 +1,8 @@
 server:
-  port: ${PORT:${SERVER_PORT:0}}
+  port: 8761
 eureka:
   client:
-    fetch-registry: true
-    register-with-eureka: true
-    service-url:
-      default-zone: http://localhost:8761/eureka
-  instance:
-    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
-spring:
-  sleuth:
-    enabled: false
-  zipkin:
-    enabled: false
+    fetch-registry: false
+    register-whit-eureka: false
+    service-url: 
+      default-zone: http://${eureka.instance.hostname}:${server.port}/eureka/
