--- a/CustomerServicesApplication/build.gradle
+++ b/CustomerServicesApplication/build.gradle
@@ -33,9 +33,9 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 	implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap:3.1.3'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
-	implementation 'org.springframework.cloud:spring-cloud-starter-circuitbreaker-resilience4j'
-	implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
-	implementation 'org.springframework.cloud:spring-cloud-sleuth-zipkin:3.1.6'
+	//implementation 'org.springframework.cloud:spring-cloud-starter-circuitbreaker-resilience4j'
+	//implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
+	//implementation 'org.springframework.cloud:spring-cloud-sleuth-zipkin:3.1.6'
 	implementation 'org.springframework.boot:spring-boot-starter-aop:2.5.4'
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server'
 	implementation 'org.springframework.cloud:spring-cloud-starter-config'
