Actualizacion del Servicio Customer

--- a/Config-data/Auth-Services.yaml
+++ b/Config-data/Auth-Services.yaml
@@ -10,9 +10,11 @@ eureka:
     instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
   admin-paths:
     paths:
-      - uri: "/customer/create/"
+      - 
+        uri: "/customer/create/"
         method: "POST"
-      - uri: "/customer/{1}[0-9]+"
+      - 
+        uri: "/customer/{1}[0-9]+"
         method: "GET"
 
 
