--- a/GatewayServicesApplication/src/main/resources/bootstrap.yaml
+++ b/GatewayServicesApplication/src/main/resources/bootstrap.yaml
@@ -2,6 +2,10 @@ spring:
   application:
     name: Gateway-Services
   cloud:
+    discovery:
+      enabled: true
     config:
       enabled: true
       uri: http://localhost:8081
+
+
